# sip_gateway

./: .clangd  .dockerignore  .gitignore  AGENTS.md  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  migration.md
cmake/: Dependencies.cmake  onnxruntime_install.cmake  pjproject_pkg_config.sh  pjsip_config_site.h  pjsip_symlinks.cmake
docs/: architecture.md  backend_api.md  dev_setup.md  env_compat.md  runbook.md
include/sip_gateway/: config.hpp  logging.hpp  metrics.hpp
include/sip_gateway/audio/: player.hpp  port.hpp  recorder.hpp
include/sip_gateway/backend/: client.hpp  ws_client.hpp
include/sip_gateway/server/: rest_server.hpp
include/sip_gateway/sip/: account.hpp  app.hpp  call.hpp  tts_pipeline.hpp
include/sip_gateway/utils/: async.hpp  http.hpp  text.hpp
include/sip_gateway/vad/: correction.hpp  model.hpp  processor.hpp
python/: client_bot_base.py
python/sip/: async_callback.py  audio_media_player.py  audio_message.py  pjaccount.py  pjapp.py  pjcall.py  recording_port.py  sip_config.py  sip_mixin.py  task_manager.py  wav_writer.py
python/sip/vad/: processor6.py  vad_correction2.py
scripts/: build.sh  run.sh  run_tests.sh
src/: config.cpp  logging.cpp  main.cpp  metrics.cpp
src/audio/: player.cpp  port.cpp  recorder.cpp
src/backend/: client.cpp  ws_client.cpp
src/server/: rest_server.cpp
src/sip/: account.cpp  app.cpp  call.cpp  tts_pipeline.cpp
src/utils/: async.cpp  http.cpp  text.cpp
src/vad/: correction.cpp  model.cpp  processor.cpp
tests/: test_http_utils.cpp  test_text_utils.cpp
